<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >


        <TextView
            android:id="@+id/tv_sl_no"
            android:layout_width="@dimen/dimen120dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/sr_no"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dimen30dp"
            />

        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="@dimen/dimen120dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/tv_sl_no"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/first_name"
            android:singleLine="true"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_last_name"
            android:layout_width="@dimen/dimen120dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/tv_first_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/last_name"
            android:singleLine="true"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_phone_no"
            android:layout_width="@dimen/dimen120dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/tv_last_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/phone"
            android:singleLine="true"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="@dimen/dimen120dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/tv_phone_no"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/city"
            android:singleLine="true"
            android:gravity="center"
            />


        <TextView
            android:id="@+id/tv_state"
            android:layout_width="@dimen/dimen120dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/tv_city"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/state"
            android:singleLine="true"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_pin_code"
            android:layout_width="@dimen/dimen120dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/tv_state"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/pin_code"
            android:singleLine="true"
            android:gravity="center"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>