<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_parent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen50dp"
            android:visibility="visible"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@+id/show_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/table_new"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimen18sp"
                app:layout_constraintStart_toEndOf="@+id/iv_back"
                android:layout_marginStart="@dimen/dimen10dp"
                />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen10dp"
                android:layout_marginStart="@dimen/dimen5dp"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_navigate_before_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@null"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>







        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/dimen20sp"
            android:layout_marginTop="@dimen/dimen20dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_parent"
            android:textColor="@color/colorBlack"
            android:textStyle="italic|bold"
            />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen20dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen10dp"
                >


                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:background="@drawable/rounded_corner_gray_border"
                    android:gravity="center_vertical"
                    android:hint="@string/first_name_form"
                    android:textColorHint="@color/colorGray"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/dimen10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:text=""
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen15dp"
                    android:background="@drawable/rounded_corner_gray_border"
                    android:gravity="center_vertical"
                    android:hint="@string/last_name_form"
                    android:textColorHint="@color/colorGray"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/dimen10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:text=""
                    app:layout_constraintTop_toBottomOf="@+id/et_first_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen15dp"
                    android:background="@drawable/rounded_corner_gray_border"
                    android:gravity="center_vertical"
                    android:hint="@string/phone_form"
                    android:textColorHint="@color/colorGray"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:padding="@dimen/dimen10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:text=""
                    app:layout_constraintTop_toBottomOf="@+id/et_last_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen15dp"
                    android:background="@drawable/rounded_corner_gray_border"
                    android:gravity="center_vertical"
                    android:hint="@string/city_form"
                    android:textColorHint="@color/colorGray"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/dimen10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:text=""
                    app:layout_constraintTop_toBottomOf="@+id/et_phone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />


                <EditText
                    android:id="@+id/et_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen15dp"
                    android:background="@drawable/rounded_corner_gray_border"
                    android:gravity="center_vertical"
                    android:hint="@string/state_form"
                    android:textColorHint="@color/colorGray"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="@dimen/dimen10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:text=""
                    app:layout_constraintTop_toBottomOf="@+id/et_city"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <EditText
                    android:id="@+id/et_pincode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen15dp"
                    android:background="@drawable/rounded_corner_gray_border"
                    android:gravity="center_vertical"
                    android:hint="@string/pin_code_form"
                    android:textColorHint="@color/colorGray"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:padding="@dimen/dimen10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:text=""
                    app:layout_constraintTop_toBottomOf="@+id/et_state"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintGuide_percent="0.5"
                    android:orientation="vertical"
                    />


                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/colorBlue"
                    app:layout_constraintTop_toBottomOf="@+id/et_pincode"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    android:layout_marginTop="@dimen/dimen40dp"
                    android:layout_marginEnd="@dimen/dimen20dp"
                    android:paddingStart="@dimen/dimen30dp"
                    android:paddingEnd="@dimen/dimen30dp"
                    android:paddingTop="@dimen/dimen10dp"
                    android:textStyle="bold"
                    android:paddingBottom="@dimen/dimen10dp"
                    android:background="@drawable/rounded_corner_blue_border_button"
                    />

                <TextView
                    android:id="@+id/tv_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintTop_toBottomOf="@+id/et_pincode"
                    app:layout_constraintStart_toEndOf="@+id/guideline"
                    android:layout_marginTop="@dimen/dimen40dp"
                    android:layout_marginStart="@dimen/dimen20dp"
                    android:paddingStart="@dimen/dimen40dp"
                    android:paddingEnd="@dimen/dimen40dp"
                    android:paddingTop="@dimen/dimen10dp"
                    android:paddingBottom="@dimen/dimen10dp"
                    android:background="@drawable/rounded_corner_blue_solid_button"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
